<resources>
    <string name="app_name">MakeMeBeautifull</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="create_new_">Create new Accout </string>
    <string name="forget_pass_">Create Forget Password </string>
    <string name="login_">Login </string>
    <string name="infologin"> Please login to use the app</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="navbarfragment">NavBarFragment</string>
    <string name="mainacivity">MainActivity</string>
    <string name="user">User</string>
    <string name="homeceter">HomeCenter</string>
    <string name="account">Account</string>
    <string name="search">Search</string>
    <string name="homefragment">HOmeFragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>