<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bnavhome"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home"/>
    <item
        android:id="@+id/bnavsearch"
        android:enabled="true"

        android:icon="@drawable/search"
        android:title="@string/search"/>
    <item
        android:id="@+id/bnavcenter"
        android:enabled="true"
        android:visible="false"
        android:icon="@drawable/homecenter"
        android:title="@string/homeceter"/>

    <item
        android:id="@+id/bnavfavarite"
        android:enabled="true"
        android:icon="@drawable/favorite"
        android:title="@string/favorites"/>
    <item
        android:id="@+id/bnavuser"
        android:enabled="true"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/user"/>
</menu>